--- a/src/style/swiper.css
+++ b/src/style/swiper.css
@@ -2,9 +2,9 @@
 .swiper-button-next {
   color: wheat;
   font-weight: bold;
+  margin-inline: -8px;
 }
 
 .swiper-pagination-bullet-active {
     background: wheat;
 }
-
